--- a/src/component/Home/banner/Banner.css
+++ b/src/component/Home/banner/Banner.css
@@ -147,7 +147,7 @@ a {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url(images/banner/whitestar.png);
+  background-image: url(../../../assets/images/banner/whitestar.png);
   animation: moVebounce 5s linear infinite;
   z-index: -1;
 }
