--- a/src/component/Home/banner/Banner.css
+++ b/src/component/Home/banner/Banner.css
@@ -110,7 +110,7 @@ a {
   z-index: 1;
   }
   .main-banner-area-two{
-    background-image: url(images/banner/banner-bg.jpg);
+    background-image: url(../../../assets/images/banner/banner-bg.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
