--- a/src/component/footer/Footer.css
+++ b/src/component/footer/Footer.css
@@ -4,7 +4,7 @@
 
 .footer{
  
-  background-image: url(images/footer/01.png);
+  background-image: url(../../assets/images/footer/01.png);
   padding-bottom:3rem;
   position:relative;
   overflow: hidden;
