--- a/src/component/Contact/Contact.css
+++ b/src/component/Contact/Contact.css
@@ -2,7 +2,7 @@
 .contact-banner {
   
   margin-top:6rem;
-  background-image: url(images/contact/img-5.jpg);
+  background-image: url(../../assets/images/contact/img-5.jpg);
  
   position: relative;
   z-index: 1;
